Upgraded to latest version of Kotlin and JDK 24