@@ -1,6 +1,5 @@
 plugins {
-    kotlin("jvm") version "1.7.0"
-    id("com.github.johnrengelman.shadow") version "7.1.2"
+    kotlin("jvm") version "2.2.20"
     application
 }
 
@@ -10,27 +9,18 @@ repositories {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(18))
+        languageVersion.set(JavaLanguageVersion.of(24))
     }
-}
-
-tasks.withType<JavaCompile> {
-    options.compilerArgs = listOf("--add-modules=jdk.incubator.foreign")
 }
 
 application {
     mainClass.set("shamsasari.wallhavenplugin.WallhavenPlugin")
     applicationDefaultJvmArgs = listOf(
-        "--add-modules=jdk.incubator.foreign",
         "--enable-native-access=ALL-UNNAMED"
     )
 }
 
 dependencies {
-    implementation("org.apache.logging.log4j:log4j-core:2.17.2")
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.13.3")
-}
-
-tasks.shadowJar {
-    archiveClassifier.set("")
+    implementation("org.apache.logging.log4j:log4j-core:2.25.2")
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.20.0")
 }
